--- a/app/src/main/res/layout/activity_binding_adapter.xml
+++ b/app/src/main/res/layout/activity_binding_adapter.xml
@@ -1,25 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
-        <import type="android.view.View" />
         <variable
-            name="title"
-            type="String" />
-        <variable
-            name="imageUrl"
-            type="String" />
-        <variable
-            name="drawable"
-            type="android.graphics.drawable.Drawable" />
-        <variable
-            name="view"
-            type="com.corffen.mvvmdemo.BindingAdapterActivity" />
+            name="viewModel"
+            type="com.corffen.mvvmdemo.bindingadapter.BindingAdapterViewModel" />
 
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -28,23 +19,25 @@
             android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{title}" />
+            android:text="@{viewModel.textContent}" />
 
         <Button
             android:id="@+id/btn_change"
-            android:text="改变字体"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:onClick="@{() ->viewModel.change()}"
+            android:text="改变一下" />
 
         <ImageView
-            android:src="@{drawable}"
             android:layout_width="80dp"
-            android:layout_height="80dp" />
+            android:layout_height="80dp"
+            android:src="@{viewModel.drawable}" />
+
         <ImageView
             android:id="@+id/iv_net"
-            app:imageUrl="@{imageUrl}"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:imageUrl="@{viewModel.imageUrl}" />
     </LinearLayout>
 
 </layout>
