--- a/app/src/main/res/layout/item_string_rv.xml
+++ b/app/src/main/res/layout/item_string_rv.xml
@@ -6,6 +6,8 @@
 
     <TextView
         android:id="@+id/tv_rv_content"
+        android:padding="16dp"
+        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
